Fix service-cart z-index (fixes #341)

--- a/styles/service-cart.less
+++ b/styles/service-cart.less
@@ -1,4 +1,7 @@
 #service-cart.overlay {
+  z-index: 1000; // falls behind the search
+
+
   // todo: refactor all customization icons into a separate layout.
   ul.minimized {
     width: @map-control-icon-width;
